docs: simplify web scraper example

--- a/examples/web-scraper/index.html
+++ b/examples/web-scraper/index.html
@@ -244,7 +244,7 @@
             <button data-js-dialog-open class="Button Button-is-help Button-is-bordered" type="button" aria-label="Help">?</button>
         </div>
         <main class="Panel--main" is-smooth-scrolling>
-            <form id="form" class="Stack" method="GET" action="http://localhost">
+            <form id="form" class="Stack" method="GET" action="/">
                 <div class="FormField">
                     <div class="FormField--text">
                         <label class="FormField--label" for="url">URL</label>
